# lolly

./: .gitignore  README.md  lolly-temp.kicad_pcb  lolly.kicad_pcb  lolly.kicad_prl  lolly.kicad_pro  lolly.kicad_sch  pcb.py  q1.kicad_pcb  q1.kicad_prl  q1.kicad_pro  q2.kicad_pcb  q2.kicad_prl  q2.kicad_pro  q3.kicad_pcb  q3.kicad_prl  q4.kicad_pcb  q4.kicad_prl  q4.kicad_pro  schema.py
firmware/: Makefile  README.md  main.elf  main.hex  planar.rb  polar.rb
firmware/core/: mk20dx128.c
firmware/src/: lolly.cpp  maps.h  moreoldeffects.cpp.old  palette.h  segment.h
firmware/src/inc/: util.cpp
pcb/: README.md  layout.py  manual.kicad_pcb  manual.kicad_pro  pcbfix.py  pyproject.toml  q1.kicad_pcb  q1.kicad_prl  q1.kicad_pro  q2.kicad_pcb  q2.kicad_pro  q3.kicad_pcb  q3.kicad_pro  q4-PTH.drl  q4.kicad_pcb  q4.kicad_prl  schema.py  schemafix.py  schemapos.py  template.kicad_sch
pcb/core/: #auto_saved_files#  core.kicad_pcb  core.kicad_prl  core.kicad_pro  core.kicad_sch  ~core.kicad_sch.lck
